# pico-wifi

./: CMakeLists.txt  README.md  lwipopts_examples_common.h
smart_grid/: CMakeLists.txt  mqtt-sni.patch
smart_grid/include/: constants.h  lwipopts.h
smart_grid/src/: main.c
